--- a/custom_components/ecovent_v2/manifest.json
+++ b/custom_components/ecovent_v2/manifest.json
@@ -2,7 +2,9 @@
   "domain": "ecovent_v2",
   "name": "EcoVentV2",
   "config_flow": true,
-  "documentation": "https://www.home-assistant.io/integrations/ecovent_v2",
+  "version": "0.0.1",
+  "documentation": "https://github.com/gody01/ecovent_v2",
+  "issue_tracker": "https://github.com/gody01/ecovent_v2/issues",
   "requirements": ["pyEcoventV2==0.9.2"],
   "ssdp": [],
   "zeroconf": [],
