--- a/custom_components/ecovent_v2/manifest.json
+++ b/custom_components/ecovent_v2/manifest.json
@@ -2,9 +2,7 @@
   "domain": "ecovent_v2",
   "name": "EcoVentV2",
   "config_flow": true,
-  "version": "0.0.2",
-  "documentation": "https://github.com/gody01/ecovent_v2",
-  "issue_tracker": "https://github.com/gody01/ecovent_v2/issues",
+  "documentation": "https://www.home-assistant.io/integrations/ecovent_v2",
   "requirements": ["pyEcoventV2==0.9.5"],
   "ssdp": [],
   "zeroconf": [],
