--- a/custom_components/ecovent_v2/manifest.json
+++ b/custom_components/ecovent_v2/manifest.json
@@ -1,5 +1,6 @@
 {
   "domain": "ecovent_v2",
+  "version": "0.0.5",
   "name": "EcoVentV2",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/ecovent_v2",
