Manage timeouts with retries. try to fix updates. define update interval to 5s (from 60).
 Changes to be committed:
	modified:   custom_components/ecovent_v2/fan.py
	modified:   custom_components/ecovent_v2/manifest.json
	modified:   custom_components/ecovent_v2/switch.py
	modified:   hacs.json

--- a/custom_components/ecovent_v2/manifest.json
+++ b/custom_components/ecovent_v2/manifest.json
@@ -1,16 +1,14 @@
 {
   "domain": "ecovent_v2",
-  "version": "0.5.0",
   "name": "EcoVentV2",
+  "version": "0.6.0",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/ecovent_v2",
-  "requirements": ["pyEcoventV2==0.9.10"],
+  "requirements": ["pyEcoventV2==0.9.12"],
   "ssdp": [],
   "zeroconf": [],
   "homekit": {},
   "dependencies": [],
-  "codeowners": [
-    "@gody01"
-  ],
+  "codeowners": ["@gody01"],
   "iot_class": "local_polling"
 }
